--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,5 +84,23 @@
           android:text="生成DataMatrix"
           app:layout_constraintStart_toEndOf="@+id/decodeDataMatrix"
           app:layout_constraintTop_toBottomOf="@+id/generateCode128"/>
+      <Button
+          android:id="@+id/decodeAztec"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="8dp"
+          android:layout_marginStart="8dp"
+          android:text="解析Aztec"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toBottomOf="@+id/decodeDataMatrix"/>
+      <Button
+          android:id="@+id/generateAztec"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="8dp"
+          android:layout_marginStart="8dp"
+          android:text="生成Aztec"
+          app:layout_constraintStart_toEndOf="@+id/decodeAztec"
+          app:layout_constraintTop_toBottomOf="@+id/generateDataMatrix"/>
 
 </android.support.constraint.ConstraintLayout>
